2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #33811: Parallel make fails
	* Makefile.am (BUILT_SOURCES): Add this macro.

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #33114: Segfault after setting the DWEN fuse with Dragon
	* jtagII.c (jtagmkII_getsync): Instead of exit()ing from
	deep within the tree when detecting the "need debugWIRE"
	situation, properly pass this up as a return code.
	* jtagII_private.h (JTAGII_GETSYNC_FAIL_GRACEFUL): New constant.
	* stk500v2.c (stk500v2_jtagmkII_open): Don't tell anything
	anymore when receiving a JTAGII_GETSYNC_FAIL_GRACEFUL from
	jtagmkII_getsync(); silently give up (all necessary has been
	said already).

2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Jason Hecker:
	* usbasp.c (libusb_to_errno): Conditionalize some error codes
	that apparently are lacking on MinGW.

2011-08-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix warnings.
	* ser_avrdoper.c: add <stdlib.h> so exit() is declared.
	* usbtiny.c (usbtiny_open): provide an initializer to a
	"may be used uninitialized" variable (since GCC could not
	fully detect the logic behind).

2011-08-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add a check for FreeBSD's libusb-1.0
	compatible library that is found in libusb.a/.so on
	FreeBSD 8+.

2011-08-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Doug Springer, based on work by
	Wolfgang Moser, Ville Voipio, Hannes Weisbach
	patch #7486: Patch to add FT2232C/D, FT2232H, FT4232H,
	usbvid, usbpid, usbdev for USB support - Based on #7062
	* avrftdi.c: New file.
	* avrftdi.h: (Ditto.)
	* configure.ac: Add check for libftdi.
	* config_gram.y: Add AVRFTDI and per-programmer USB string
	keywords.
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Add avrftdi and 2232HIO programmers.
	* pgm.h: Add USB parameters.
	* Makefile.am: Add avrftdi.c and avrftdi.h.
	* AUTHORS: Mention the new authors.
	* avrdude.1: Document the changes.
	* doc/avrdude.texi: (Ditto.)
